Implementing the singin

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 CHOKIDAR_USEPOLLING=true
+REACT_APP_BACKEND_SERVER=http://file.solutionladder.com/ajax.php?action=
+REACT_APP_SIGNIN=signin
