--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
 CHOKIDAR_USEPOLLING=true
-REACT_APP_BACKEND_SERVER=http://file.solutionladder.com/ajax.php?action=
+REACT_APP_BACKEND_SERVER=http://file.solutionladder.com/ajax.php?action=change-password
 REACT_APP_SIGNIN=signin
+REACT_APP_SECURITY=security
