--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SKIP_PREFLIGHT_CHECK=true
 CHOKIDAR_USEPOLLING=true
 REACT_APP_BACKEND_SERVER=http://file.solutionladder.com/ajax.php?action=
 REACT_APP_SIGNIN=signin
+REACT_APP_SIGNUP=signin_
