--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_SIGNIN=signin
 REACT_APP_ADDFILE=add-file
 REACT_APP_SEARCH_MEMBER=search-member&comp_id=2
 REACT_APP_SEARCH_FILE=search-file
+API_URL=/ajax.php?action=update-notification
